# cifflow

./: .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  cif_output.txt  cif_pow_cache.json  debug_grouping.py  debug_output.py  debug_parquet.py  example_fidelity.py  example_inspect.py  example_workflow.py  index.html  mkdocs.yml  objects.inv  output_grouped.cif  output_one_block.cif  output_typed.db  profile_cif_pow_cache.json  profile_duckdb.py  profile_pipeline.py  profile_samply.py  pyproject.toml  release_patch.bat  short_second.py
.claude/: settings.local.json
.github/workflows/: ci.yml  docs.yml  release.yml
api/: index.html
api/database/: index.html
api/dictionary/: index.html
api/fidelity/: index.html
api/ingestion/: index.html
api/inspect/: index.html
api/model/: index.html
api/output/: index.html
api/parser/: index.html
api/types/: index.html
api/validation/: index.html
cifflow_core/: Cargo.toml
cifflow_core/src/: cif_model.rs  error.rs  lexer.rs  lib.rs  parser.rs  raw_builder.rs
data/dictionaries/: cif_img.dic  cif_pow.dic  ddl.dic  multi_block_core.dic
data/dictionaries/testing/: cif_core.dic  templ_attr.cif  templ_enum.cif
docs/: api.md  index.md  outputspec.md
docs/api/: database.md  dictionary.md  fidelity.md  index.md  ingestion.md  inspect.md  model.md  output.md  parser.md  types.md  validation.md
outputspec/: index.html
pycifparse_core/: Cargo.toml
pycifparse_core/src/: cif_model.rs  event_sink.rs  lexer.rs  lib.rs  parser.rs  raw_builder.rs  textfield.rs  version.rs
references/: CIF1-1 Common semantic features.html  CIF1-1 File syntax.html  CIF1-1 grammar.txt  cif_namespaces.md
references/CIF1-1 Common semantic features_files/: analytics.js.download  fontawesome-4.4.0.min.css  framework.css  jquery.mobilemenu.js.download  newsletter.css  saved_resource.html  slimbox2.css  tabber.js.download
references/CIF1-1 File syntax_files/: band.js.download  college-font.css  iucr.css  iucr.js.download  layout.css
references/dictionaries/: cif_pow.dic  ddl.dic
search/: search_index.json
src/cifflow/: __init__.py  cifflow_core.pyi  types.py
src/cifflow/cifmodel/: __init__.py  builder.py  clean.py  model.py  scalar.py  textfield.py  writer.py
src/cifflow/database/: __init__.py  compact.py  defaults.py
src/cifflow/dictionary/: __init__.py  cache.py  ddlm_item.py  ddlm_parser.py  loader.py  resolver.py  schema.py  schema_apply.py  visualise.py
src/cifflow/fidelity/: __init__.py  check.py
src/cifflow/ingestion/: __init__.py  duckdb_ingest.py  ingest.py
src/cifflow/inspect/: __init__.py  _common.py  _ingest.py  _lexer.py  _model.py  _parser.py  _schema.py
src/cifflow/lexer/: __init__.py  _tokenize_re.py  lexer.py  tokens.py
src/cifflow/output/: __init__.py  emit.py  plan.py  quote.py
src/cifflow/parser/: __init__.py  parser.py  version.py
src/cifflow/validation/: __init__.py  _db_checks.py  _db_validate.py  _validate.py
src/pycifparse/: __init__.py  debug.py  pycifparse_core.pyi  types.py
src/pycifparse/cifmodel/: __init__.py  builder.py  clean.py  model.py  scalar.py  textfield.py  writer.py
src/pycifparse/database/: __init__.py  compact.py
src/pycifparse/dictionary/: __init__.py  cache.py  ddlm_item.py  ddlm_parser.py  loader.py  resolver.py  schema.py  schema_apply.py  visualise.py
src/pycifparse/fidelity/: __init__.py  check.py
src/pycifparse/ingestion/: __init__.py  duckdb_ingest.py  ingest.py
src/pycifparse/inspect/: __init__.py  _common.py  _ingest.py  _lexer.py  _model.py  _parser.py  _schema.py
src/pycifparse/lexer/: _tokenize_re.py  lexer.py  tokens.py
src/pycifparse/output/: __init__.py  emit.py  plan.py  quote.py
src/pycifparse/parser/: __init__.py  parser.py  version.py
src/pycifparse/validation/: __init__.py  _db_checks.py  _db_validate.py  _validate.py
tasks/: capture_session.md  lessons.md  todo.md
tests/: malformed.lnk  run_all.bat  run_fast.bat  run_slow.bat  test_debug.py  test_inspect.py
tests/cif_files/: Selenium_0.parquet  cif_core_short.dic  enumeration_range.cif  ideal_condensed.cif  multi_list.cif  multi_many.cif  multi_one.cif  multi_one_as_oneblock.cif  one_structure.cif  one_structure.parquet  pathological_key_block.cif  second short.cif  second_decimated.cif  second_short.cif  second_short_decimated.cif  single_list.cif  single_many_1.cif  single_many_2.cif  single_one.cif  ssd_grouped.cif  tmp.cif  transitive_01.cif  transitive_02.cif  transitive_03.cif
tests/cif_files/cifflow/: core_alias_tag.cif  core_cell_only.cif  core_multiline_formula.cif  core_multiple_blocks.cif  core_quoted_sentinel.cif  core_unknown_tag.cif  fallback_containers.cif  fallback_loop.cif  pow_small_pd_data_meas.cif  pow_small_pd_meas_proc.cif  powder_loop.cif  powder_loop_output_original.cif
tests/cif_files/comcifs/: 10.cif  cif1_quoting.cif  strings.cif
tests/cif_files/malformed/: containers.cif  loops.cif  multiline.cif  strings1-1.cif  strings2-0.cif
tests/cif_files/pycifparse/: core_atom_site_no_atom_type.cif  core_cell_su.cif  core_keyless_sets.cif  core_placeholder_in_loop.cif  core_repeated_loop_key.cif  fallback_multiblock.cif  fallback_scalars.cif  fallback_value_types.cif  pow_enumeration_default.cif  pow_multiple_blocks_canonical_case.cif  pow_multiple_blocks_no_common.cif  (+1 more)
tests/cifmodel/: test_builder.py  test_clean.py  test_integration.py  test_model.py  test_scalar.py  test_textfield.py  test_writer.py
tests/database/: test_compact.py  test_convert.py
tests/dictionary/: test_cache.py  test_ddlm_item.py  test_fallback_schema.py  test_integration.py  test_loader.py  test_resolver.py  test_schema.py  test_schema_apply.py  test_visualise.py
tests/fidelity/: test_check_fidelity.py
tests/ingestion/: test_cifflow_files.py  test_ingest.py  test_integration.py  test_pycifparse_files.py
tests/lexer/: test_lexer.py
tests/output/: test_emit.py  test_quote.py
tests/parser/: test_integration.py  test_malformed.py  test_parser.py  test_version.py
tests/validation/: test_db_validate.py  test_validate.py
(+1 files in other folders)
