[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cifflow"
version = "0.1.0"
description = "A streaming, event-driven parser for Crystallographic Information Files (CIF)"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cifflow.dictionary" = ["js/*.js", "js/LICENSES.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: large real-world CIF files (deselect with -m 'not slow')",
]
addopts = "--cov=cifflow --cov-branch --cov-report=term-missing --cov-report=html:tests/test_coverage"
filterwarnings = [
    "ignore::ResourceWarning",
]

[tool.coverage.run]
branch = true
source = ["cifflow"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "tests/test_coverage"
