[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "cifflow"
version = "0.1.5"
description = "Parse, store, validate, and emit Crystallographic Information Files (CIF)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "duckdb",
    "pyarrow",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "bump-my-version",
]

[tool.maturin]
python-source = "src"
module-name = "cifflow.cifflow_core"
manifest-path = "cifflow_core/Cargo.toml"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: large real-world CIF files (deselect with -m 'not slow')",
]
addopts = "--cov=cifflow --cov-branch --cov-report=term-missing --cov-report=html:tests/test_coverage"
filterwarnings = [
    "ignore::ResourceWarning",
]

[tool.coverage.run]
branch = true
source = ["cifflow"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "tests/test_coverage"

[tool.bumpversion]
current_version = "0.1.5"
commit = true
tag = true
tag_name = "v{new_version}"
tag_message = "Version {new_version}"
commit_message = "Bump version: {current_version} → {new_version} [skip ci]"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "cifflow_core/Cargo.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
