[package]
name = "cifflow_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "cifflow_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "profile_cif"
path = "src/bin/profile_cif.rs"

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
arrow = { version = "54", features = ["ipc", "pyarrow"] }
