[package]
name = "cifflow_core"
version = "0.1.7"
edition = "2021"

[lib]
name = "cifflow_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "profile_cif"
path = "src/bin/profile_cif.rs"

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
arrow = { version = "58", features = ["ipc", "pyarrow"] }
